fix: cameraoff screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .video{
     border-radius: 8px;
     transform: rotateY(180deg);
+    height: 100%;
+    width: 100%;
     /* Safari and Chrome */
     -webkit-transform:rotateY(180deg);
     /* Firefox */
